# protocol

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
.github/workflows/: rust.yml
contracts/: Cargo.toml  lib.rs
contracts/captcha/: Cargo.toml
contracts/captcha/src/: lib.rs
contracts/common/src/: lib.rs
contracts/printerr_macro/: Cargo.toml
contracts/printerr_macro/src/: lib.rs
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs
contracts/util/: Cargo.toml
contracts/util/src/: lib.rs
crates/named_module_macro/: Cargo.toml
crates/named_module_macro/src/: lib.rs
crates/storage/derive/: Cargo.toml
crates/storage/derive/src/: lib.rs
dev/: README.md  package.json
dev/src/: cli.ts
docker/: Dockerfile  Substrate.boot.sh  Substrate.dockerfile
scripts/: deploy.ts  types.ts
src/proxy/: lib.rs
